--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-left:20px;
     span {
         margin-left: 50%;
     }
